@@ -39,14 +39,12 @@ define('KREXX_TEST_IN_PROGRESS', true);
 
 // Make sure, that we are able to mock the living hell out of this baby.
 $analyseRoutingProcess = '\\Brainworxx\\Krexx\\Analyse\\Routing\\Process\\';
-$serviceFactory = '\\Brainworxx\\Krexx\\Service\\Factory\\';
 $serviceFlow = '\\Brainworxx\\Krexx\\Service\\Flow\\';
 $serviceMisc = '\\Brainworxx\\Krexx\\Service\\Misc\\';
 $viewOutput = '\\Brainworxx\\Krexx\\View\\Output\\';
 $view = '\\Brainworxx\\Krexx\\View';
 
 PHPMock::defineFunctionMock($analyseRoutingProcess, 'class_exists');
-PHPMock::defineFunctionMock($serviceFactory, 'is_writable');
 PHPMock::defineFunctionMock($serviceFlow, 'ini_get');
 PHPMock::defineFunctionMock($serviceFlow, 'time');
 PHPMock::defineFunctionMock($serviceFlow, 'memory_get_usage');
@@ -58,6 +56,7 @@ PHPMock::defineFunctionMock($serviceMisc, 'filemtime');
 PHPMock::defineFunctionMock($serviceMisc, 'mb_strlen');
 PHPMock::defineFunctionMock($serviceMisc, 'glob');
 PHPMock::defineFunctionMock($serviceMisc, 'time');
+
 PHPMock::defineFunctionMock($viewOutput, 'register_shutdown_function');
 PHPMock::defineFunctionMock($viewOutput, 'microtime');
 PHPMock::defineFunctionMock($viewOutput, 'glob');
