@@ -12,6 +12,7 @@
 - Bugfix: Wrong meta data, when using dual output.
 - Bugfix: Missing css definitions for label.
 - Bugfix: Unwanted re-enabling of the source generation.
+- Bugfix: Environment check may fail
 
 3.2.1
 - Bugfix: Wrong error handler restoration after deleting
